<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="load_title">Loading...</string>
    <string name="load_hint">Back to Stop</string>
    <string name="action_add">Add</string>
    <string name="action_back">Back</string>
    <string name="action_stop">Stop</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_update">Update</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_del">Delete</string>
    <string name="action_mqtt">Push Test</string>
    <string name="cancel">Cancel</string>
    <string name="newest">Already newest version</string>
    <string name="checking">Checking...</string>
    <string name="no_sdcard">No SD Available</string>
    <string name="refresh_hint">refresh</string>
    <string name="pull_hint">Pull</string>

</resources>