<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gt.web.news.MainActivity" >

    <item
        android:id="@+id/action_back"
        android:title="@string/action_back"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_stop"
        android:title="@string/action_stop"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_del"
        android:orderInCategory="100"
        android:title="@string/action_del"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_mqtt"
        android:orderInCategory="100"
        android:title="@string/action_mqtt"
        app:showAsAction="never"/>
</menu>